Official Solution from Part 1

--- a/welcome2015.html
+++ b/welcome2015.html
@@ -1,135 +1,151 @@
 <!DOCTYPE html>
 <HTML>
-  <head>
-    <meta charset="utf-8">
-<TITLE>Welcome to Netscape!</TITLE>
 
-</head>
-<body>
-<IMG SRC="images/tiles.gif" alt="logo" WIDTH="472" HEIGHT="137"><P>
+<HEAD>
+  <TITLE>Welcome to Netscape!</TITLE>
+  <META CHARSET="UTF-8">
+</HEAD>
 
-<h1>Welcome to
-Netscape</h1>
-<P>
+<BODY>
 
-You have just embarked on a journey across the Internet, and Netscape
-is your vehicle. This welcome page will help you get started on your use of
-Netscape and your exploration of the Internet.  </p>
+  <IMG SRC="images/tiles.gif" ALT="logo" WIDTH="472" HEIGHT="137">
 
-<p>To get around, just single-click on any blue or purple word or phrase (<a
-href="welcome_docs/example-link.html">here's an example</a>).  These are "hyperlinks" to
-other pages. Also, images with blue or purple borders are hyperlinks and can
-be single-clicked as well.  You can always return to this page by choosing
-<i>Welcome</i> from your <i>Directory</i> menu.</P>
-<hr>
+  <H1>Welcome to Netscape</H1>
 
+  <P>
+    You have just embarked on a journey across the Internet, and Netscape is your vehicle. This welcome
+    page will help you get started on your use of Netscape and your exploration of the Internet.
+  </P>
+  <P>
+    To get around, just single-click on any blue or purple word or phrase
+    (<a href="welcome_docs/example-link.html">here's an example</a>).
+    These are "hyperlinks" to other pages. Also, images with blue or purple borders are
+    hyperlinks and can be single-clicked as well. You can always return to this page by choosing
+    <i>Welcome</i> from your <i>Directory</i> menu.
+  </P>
 
-<h2>Getting
-Started...</h2>
+  <HR>
 
-<p>If you're just getting started and want some help on how to use
-Netscape, start by single-clicking on the following hyperlink: <A
-HREF="guided-tour.html">Guided Tour</A>.   Also, check out the <A
-HREF="online-manual.html">Netscape Handbook</A> for a more in depth
-view of Netscape. </p>
+  <H2>Getting Started...</H2>
+  <P>
+    If you're just getting started and want some help on how to use Netscape, start by
+    single-clicking on the following hyperlink: <A HREF="guided-tour.html">Guided Tour</A>.
+    Also, check out the <A HREF="online-manual.html">Netscape Handbook</A> for a more
+    in depth view of Netscape.
+  </P>
+  <P>
+    Should you have any other questions while you are using Netscape, please check out our
+    <A HREF="faq.html">Frequently Asked Questions</A> page.
+  </P>
 
-<p>Should you have any other questions while you are using Netscape,
-please check out our <A HREF="faq.html">Frequently Asked Questions</A> page.
-</p>
+  <HR>
 
-<hr>
+  <H2>Exploring the Internet</H2>
+  <P>
+    If you are ready to get on with exploring, you'll find some good Internet starting
+    points under the <I>Directory</I> menu. They are:
+  </P>
+  <DL>
+      <DT>
+        <A HREF="welcome.html">Welcome</A> </DT>
+      <DD> That's this page -- your initial home page. </DD>
 
+      <DT>
+        <A HREF="whats-new.html">What's New!</A>
+      </DT>
+      <DD>Want to discover the newest interesting places and events on the Internet?
+      The net is growing every day, and the What's New page will provide you with links
+      to the newest pages and services that you can visit.</DD>
 
-<h2>Exploring the
-Internet</h2><P>
-If you are
-ready to get on with exploring, you'll find some good Internet
-starting points
-under the <I>Directory</I> menu. They are:</p>
+      <DT>
+        <A HREF="whats-cool.html">What's Cool!</A>
+      </DT>
+      <DD>Tired of slogging through the What's New page looking at every new Internet
+      site under the sun? The What's Cool page highlights some of the most interesting
+      and compelling resources on the Internet. It changes regularly, so stop back often.
+      </DD>
 
-<DL>
+      <DT>
+        <A HREF="newsrc:">Go to Newsgroups</A>
+      </DT>
+      <DD>There are thousands of newsgroups on the Internet where users get together to
+      discuss a wide variety of topics. With Netscape, you can participate in these groups,
+      follow along and get involved in conversations, and post your own replies.</DD>
 
-<DT><A HREF="welcome.html">Welcome</A></dt>
-<DD> That's this page -- your initial home page.</dd>
-
-<DT><A HREF="whats-new.html">What's New!</A></dt>
-<DD>Want to discover the newest interesting places and events on the
-Internet? The net is growing every day, and the What's New page
-will provide you with links to the newest pages and services that you can
-visit.</dd>
-
-<DT><A HREF="whats-cool.html">What's Cool!</A></dt>
-<DD>Tired of slogging through the What's New page looking at
-every new Internet site under the sun?  The What's Cool page highlights
-some of the most interesting and compelling resources on the
-Internet.  It changes regularly, so stop back often.</dd>
-
-<DT><A HREF="newsrc:">Go to Newsgroups</A></dt>
-<DD>There are thousands of newsgroups on the Internet where users get together
-to discuss a wide variety of topics.  With Netscape, you can
-participate in these groups, follow along and get involved in conversations,
-and post your own replies.</dd>
-
-<DT><A HREF="internet-index.html">Internet Directory</A></dt>
-<DD>This is your Directory of Directories: each of these directories is a
-catalog of available information on the Internet.</dd>
-
-<DT><A HREF="internet-search.html">Internet Search</A></dt>
-<DD>This page will help you search the Internet for specific information and
-services.</dd>
-
-<DT><A HREF="internet-white-pages.html">Internet White Pages.</A></dt>
-<DD>If you're trying to contact someone else who is on the Internet, try
-this page.</dd>
-
-<DT><A HREF="about-the-internet.html">About the Internet?</A></dt>
-<DD>Want to know more about the Internet?  Look here. </dd>
-
-<DT><A HREF="how-to-create-mosaic-services.html">How to Create World
-Wide Web Services.</A></dt>
-<DD>If you're tired of browsing and ready to start publishing,
-you'll want to read this.</dd>
-
-<DT><A HREF="http://mosaic.mcom.com/">Mosaic Communications Corporation</A></dt>
-<DD>If you'd like to read about the company and the people that brought you
-Netscape, you can visit the Mosaic Communications home page. </dd></dl>
+      <DT>
+        <A HREF="internet-index.html">Internet Directory</A>
+      </DT>
+      <DD>This is your Directory of Directories: each of these directories is a catalog of
+      available information on the Internet.</DD>
 
 
-<hr>
-<h2>For More Information about Netscape...</h2>
-<UL>
-<LI>Choose <i>Version Information</i> from the <i>Help</i> menu
-if you'd like to know what version of Netscape you are running
-and to obtain information about new releases.
-</li>
-<LI>When you are using Netscape, you may send your comments and
-ideas to the team that's developing it.
-Read <A HREF="how-to-give-feedback.html">How to Give Feedback</A> to
-learn how to do this.  We love feedback!
-</li>
-<LI>Finally, you can find out <A HREF="how-to-get-support.html">How
-to Get Support</A> for Netscape from Mosaic Communications
-Corporation. </li>
-</UL>
-
-<hr>
-<hr>
-<hr>
-<hr>
-<hr>
-<hr>
-<H2>
+      <DT>
+        <A HREF="internet-search.html">Internet Search</A>
+      </DT>
+      <DD>This page will help you search the Internet for specific information and services.</DD>
 
 
+      <DT>
+        <A HREF="internet-white-pages.html">Internet White Pages.</A>
+      </DT>
+      <DD>If you're trying to contact someone else who is on the Internet, try this page.</DD>
 
 
-Welcome to the world of Netscape<BR> and the Internet.<BR>Enjoy!
+      <DT>
+        <A HREF="about-the-internet.html">About the Internet?</A>
+      </DT>
+      <DD>Want to know more about the Internet? Look here.</DD>
 
-</H2>
+      <DT>
+        <A HREF="how-to-create-mosaic-services.html">How to Create World
+Wide Web Services.</A>
+      </DT>
+      <DD>If you're tired of browsing and ready to start publishing, you'll want to read this.</DD>
 
-<hr>
+      <DT>
+        <A HREF="http://mosaic.mcom.com/">Mosaic Communications Corporation</A>
+      </DT>
+      <DD>If you'd like to read about the company and the people that brought you Netscape,
+      you can visit the Mosaic Communications home page. </DD>
+  </DL>
 
-<A HREF="mailto:info@mcom.com"><I>info@mcom.com</I></A><BR>
-Copyright &copy; 1994 Mosaic Communications Corporation.
-</body>
-</html>
+  <HR>
+
+  <H2>For More Information about Netscape...</H2>
+  <UL>
+    <LI>Choose <i>Version Information</i> from the <i>Help</i> menu
+    if you'd like to know what version of Netscape you are running and to obtain information about
+    new releases.
+    </LI>
+    <LI>When you are using Netscape, you may send your comments and ideas to the team that's
+    developing it. Read <A HREF="how-to-give-feedback.html">How to Give Feedback</A> to learn
+    how to do this. We love feedback!
+    </LI>
+    <LI>Finally, you can find out
+      <A HREF="how-to-get-support.html">How
+to Get Support</A> for Netscape from Mosaic Communications Corporation.
+    </LI>
+  </UL>
+
+
+    <HR>
+    <HR>
+    <HR>
+    <HR>
+    <HR>
+    <HR>
+    <H2>
+    Welcome to the world of Netscape
+    <BR> and the Internet.
+    <BR>Enjoy!
+
+  </H2>
+
+
+  <HR>
+
+  <A HREF="mailto:info@mcom.com"><I>info@mcom.com</I></A>
+  <BR> Copyright &copy; 1994 Mosaic Communications Corporation.
+</BODY>
+
+</HTML>
